--- a/client-side-code/index.html
+++ b/client-side-code/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Simple Site To Consume A Wine API on Button Click</h1>
+    <p>Type in the choice of 'horrible cheap wine', 'riesling', 'pinot noir', or 'champagne'</p>
     <button>Click Me</button>
     <input type="text">
     <h2>Result: </h2>
