--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
             <nav>
                 <ul>
                     <li>Logo and Design</li>
-
-                    
                 </ul>
             </nav>
         </header>
 		<section>
             <section class="dataBase">
-                <h1>Please use</h1>
+                <h2>Please use https://wine-api-for-non-experts.herokuapp.com/api/wine-names</h2>
                 <h3>Food and Wine Guide for Beginners</h3>
                 <form action="/url" method="GET">
                     <label for="choice">Enter Choice From Food list</p>
@@ -33,12 +31,12 @@
                     <button type="submit">Submit</button>
                 </form>
                 <ul class="dataList">
-                    <li>Chicken</li>
-                    <li>Seafood</li>
-                    <li>Salad</li>
-                    <li>Steak</li>
-                    <li>Brunch</li>
-                    <li>Stew</li>
+                    <li>Champagne</li>
+                    <li>Zinfandel</li>
+                    <li>Pinot Noir</li>
+                    <li>Riesling</li>
+                    <li>Mascato</li>
+                    <li>Cheap Horrible Choice</li>
                 </ul>
             </section>  
         </section>
