changed HTML to have only text and deleted input text form

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
             <section class="dataBase">
                 <h2>Please use https://wine-api-for-non-experts.herokuapp.com/api/wine-names</h2>
                 <h3>Food and Wine Guide for Beginners</h3>
-                <form action="/url" method="GET">
-                    <label for="choice">Enter Choice From Food list</p>
-                        <input type="text" id="foodchoice" name="foodchoice" minlength="7" maxlength="21"required>
-                    </label>
-                    <button type="submit">Submit</button>
-                </form>
+                <p>Type in one of the choices from below at the end of URL above. Change out the "wine-names" for one of the listed below.</p>
                 <ul class="dataList">
                     <li>Champagne</li>
                     <li>Zinfandel</li>
