added more listings of API data

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <li>Pinot Noir</li>
                     <li>Riesling</li>
                     <li>Mascato</li>
+                    <li>Merlot</li>
+                    <li>Red Blend</li>
+                    <li>Cabernet Sauvignon</li>
                     <li>Cheap Horrible Choice</li>
                 </ul>
             </section>  
