added to api info and server side code

--- a/client-side-code/index.html
+++ b/client-side-code/index.html
@@ -7,10 +7,25 @@
 </head>
 <body>
     <h1>Simple Site To Consume A Wine API on Button Click</h1>
-    <p>Type in the choice of 'horrible cheap wine', 'riesling', 'pinot noir', or 'champagne'</p>
+    <p>Type in the choice of</p>
+        <ul>
+            <li>rieseling</li>
+            <li>cabernet sauvignon</li>
+            <li>red blend</li>
+            <li>champange</li>
+            <li>mascato</li>
+            <li>zinfandel</li>
+            <li></li>
+            <li></li>
+            <li>cheap horrible choice</li>
+        </ul>
     <button>Click Me</button>
     <input type="text">
     <h2>Result: </h2>
+    <p>Resut will tell you if its a red or white</p>
+
+
+
 
     <script src='js/main.js'></script>
 </body>
