index html text added

--- a/client-side-code/index.html
+++ b/client-side-code/index.html
@@ -15,8 +15,8 @@
             <li>champange</li>
             <li>mascato</li>
             <li>zinfandel</li>
-            <li></li>
-            <li></li>
+            <li>red box wine</li>
+            <li>white box wine</li>
             <li>cheap horrible choice</li>
         </ul>
     <button>Click Me</button>
