crlf issues changed to LF on CSS files

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                     <li>Mascato</li>
                     <li>Merlot</li>
                     <li>Red Blend</li>
+                    <li>Red Box Wine</li>
+                    <li>White Box Wine</li>
                     <li>Cabernet Sauvignon</li>
                     <li>Cheap Horrible Choice</li>
                 </ul>
