--- a/client-side-code/index.html
+++ b/client-side-code/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client Side API Code</title>
+    <link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Simple Site To Consume A Wine API on Button Click</h1>
