--- a/client-side-code/index.html
+++ b/client-side-code/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client Side API Code</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Source+Sans+Pro&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- Font Awesome --> 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">-->
@@ -16,27 +14,47 @@
     href="https://unpkg.com/milligram@1.3.0/dist/milligram.min.css">-->
 </head>
 <body>
-  <header>
-    <section class="menu">
-      <nav class="navbar">
-        <ul class="littleList">
-          <li>
-            <a href="/">Home</a>
-          </li>
-          <li>
-            <a href="/api">API</a>
-          </li>
-          <li>
-            <a href="/about">About</a>
-          </li>
+  <header class="navbar">
+    <section class="container flex">
+      <!-- <h1 class="logo">Wine API June 2022</h1> -->
+      <nav class="nav-main">
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="api.html">API</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
     </section>
   </header>
-  <section class="tophalf">
-    <h2>Simple Site To Consume A Wine API on Button Click</h2>
-    <p>Type in the choice of</p>
-        <ul class="bigList">
+  <section class="top">
+    <section class="container grid">
+      <section class="top-text">
+        <h1>Wine API</h1>
+        <p>This is a simple API that allows you to search for wines by name, type, and features.It allows you to add new wines, and delete existing wines.</p>
+      </section>
+    </section>
+  </section>
+  <section class="mainInfo">
+    <section class="container grid">
+      <section class="mainInfo-text">
+        <h2>Simple Site To Consume A Wine API on Button Click</h2>
+        <!-- <p>Choice of Wine</p> -->
+        <label for="wine-names">Choose a wine:</label>
+        <select name="wine-names" id="wine-names">
+          <option value="riesling">Riesling</option>
+          <option value="cabernet sauvignon">Cabernet sauvignon</option>
+          <option value="red blend">Red Blend</option>
+          <option value="champange">Champange</option>
+          <option value="chardonnay">Chardonnay</option>
+          <option value="pinot noit">Pinot Noir</option>
+          <option value="merlot">Merlot</option>
+          <option value="mascato">Mascato</option>
+          <option value="zinfandel">Zinfandel</option>
+          <option value="box wine">Box Wine</option>
+          <option value="cheap wine">Cheap Wine</option>
+          <option value="rebranded">Rebranded</option>
+        </select>        
+          <!-- <ul class="big-list">
             <li>rieseling</li>
             <li>cabernet sauvignon</li>
             <li>red blend</li>
@@ -46,11 +64,23 @@
             <li>red box wine</li>
             <li>white box wine</li>
             <li>cheap horrible choice</li>
-        </ul>
-    <button>Click Me</button>
-    <input type="text">
-    <h2>Result: </h2>
-    <p>Resut will tell you if its a red or white</p>
+          </ul> -->
+          <a href="api.html" class="btn btn-outline">Read More</a>
+        </section>
+    </section>
+  </section>
+  <section>
+    <div class="mainInfo-form card"> 
+      <h2>Submit A New Wine</h2>
+      <form>
+        <div class="form-control">
+          <input type="text" name="name" placeholder="Name" required>
+        </div>
+        <input type="submit" value="Send" class="btn btn-primary">
+      </form>
+      <h2>Result: </h2>
+      <p>Resut will tell you if it is a red or white wine</p>
+    </div>
   </section>
     <!--<main class="wrapper" style="padding-top:1.2em">
 
