--- a/client-side-code/index.html
+++ b/client-side-code/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -55,7 +55,7 @@
           <option value="zinfandel">Zinfandel</option>
           <option value="box wine">Box Wine</option>
           <option value="cheap wine">Cheap Wine</option>
-          <option value="rebranded">Rebranded</option>
+          <option value="susumaniello">Susumaniello</option>
         </select>        
           <!-- <ul class="big-list">
             <li>rieseling</li>
@@ -75,12 +75,12 @@
   <section class="bottom">
     <section class = 'ui-widget'>
       <label for="name">
-          Name:
+          Wine Name:
       </label>
       <input id="name">
       <ul id="food"></ul>
   </section>
-  <section>
+  <section>  
       <img src="">
   </section>
   </section>
