spelling errors and refactoring change to eachArray in main.js

--- a/client-side-code/index.html
+++ b/client-side-code/index.html
@@ -51,7 +51,7 @@
           <option value="chardonnay">Chardonnay</option>
           <option value="pinot noit">Pinot Noir</option>
           <option value="merlot">Merlot</option>
-          <option value="mascato">Mascato</option>
+          <option value="moscato">Moscato</option>
           <option value="zinfandel">Zinfandel</option>
           <option value="box wine">Box Wine</option>
           <option value="cheap wine">Cheap Wine</option>
